crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__constr.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Constr 122 [I 42])) of
  DataConstr payload#8 -> payload#8
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_9
    (force
      [[[[[[(force (builtin chooseData)) generated_9]
        (delay [(lam payload_8 payload_8) [(builtin unConstrData) generated_9]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (Constr 122 [I 42]))])
--- optimized Core
case@Data (con data (Constr 122 [I 42])) of
  DataConstr payload#1 -> payload#1
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_5
      [(lam partial_6
        [(lam generated_4
          (force
            [[[[[[builtin_5 generated_4]
              (delay [(lam payload_2 payload_2) [(builtin unConstrData) generated_4]])]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]))
          (con data (Constr 122 [I 42]))])
        [builtin_3 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Constr 122 [I 42])) of
  DataConstr payload#8 -> payload#8
  _ -> trace "cold" in error
--- isolated folded Core
let payload#8 : pair int (list Data) = (con (pair integer (list data)) (122, [(I 42)])) in
payload#8
--- isolated cleaned Core
(con (pair integer (list data)) (122, [(I 42)]))
--- isolated UPLC before
(program 1.1.0
  [(lam generated_9
    (force
      [[[[[[(force (builtin chooseData)) generated_9]
        (delay [(lam payload_8 payload_8) [(builtin unConstrData) generated_9]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (Constr 122 [I 42]))])
--- isolated UPLC after
(program 1.1.0 (con (pair integer (list data)) (122, [(I 42)])))
--- result
(con (pair integer (list data)) (122, [(I 42)]))
--- logs
[]
