crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__empty_list.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (List [])) of
  DataList payload#3 -> payload#3
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_4
    (force
      [[[[[[(force (builtin chooseData)) generated_4]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_3 payload_3) [(builtin unListData) generated_4]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (List []))])
--- optimized Core
(con (list data) [])
--- optimized UPLC
(program 1.1.0 (con (list data) []))
--- isolated pass
--- isolated ANF input
case@Data (con data (List [])) of
  DataList payload#3 -> payload#3
  _ -> trace "cold" in error
--- isolated folded Core
let payload#3 : list Data = (con (list data) []) in
payload#3
--- isolated cleaned Core
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam generated_4
    (force
      [[[[[[(force (builtin chooseData)) generated_4]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_3 payload_3) [(builtin unListData) generated_4]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (List []))])
--- isolated UPLC after
(program 1.1.0 (con (list data) []))
--- result
(con (list data) [])
--- logs
[]
