crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__empty_map.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Map [])) of
  DataMap payload#5 -> payload#5
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_5 payload_5) [(builtin unMapData) generated_6]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (Map []))])
--- optimized Core
(con (list (pair data data)) [])
--- optimized UPLC
(program 1.1.0 (con (list (pair data data)) []))
--- isolated pass
--- isolated ANF input
case@Data (con data (Map [])) of
  DataMap payload#5 -> payload#5
  _ -> trace "cold" in error
--- isolated folded Core
let payload#5 : list (pair Data Data) = (con (list (pair data data)) []) in
payload#5
--- isolated cleaned Core
(con (list (pair data data)) [])
--- isolated UPLC before
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_5 payload_5) [(builtin unMapData) generated_6]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    (con data (Map []))])
--- isolated UPLC after
(program 1.1.0 (con (list (pair data data)) []))
--- result
(con (list (pair data data)) [])
--- logs
[]
