crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__empty_map_missing.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Map [])) of
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_1
    (force
      [[[[[[(force (builtin chooseData)) generated_1] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (con data (Map []))])
--- optimized Core
case@Data (con data (Map [])) of
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam generated_1
      (force
        [[[[[[builtin_2 generated_1] (delay (error))] (delay (error))] (delay (error))]
          (delay (error))]
          (delay (error))]))
      (con data (Map []))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Map [])) of
--- isolated folded Core
error
--- isolated cleaned Core
error
--- isolated UPLC before
(program 1.1.0
  [(lam generated_1
    (force
      [[[[[[(force (builtin chooseData)) generated_1] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (con data (Map []))])
--- isolated UPLC after
(program 1.1.0 (error))
--- result
error: ExplicitErrorTerm
--- logs
[]
